plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.thRed'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    querydsl.extendsFrom compileClasspath
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // health check
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // queryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"


    // p6spy
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    // mySql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // aws
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
    // aws parameter-store
    implementation("io.awspring.cloud:spring-cloud-aws-starter-parameter-store")

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // test lombok
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // test mockito
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.mockito:mockito-inline:3.9.0'

    // jwt
    implementation 'com.auth0:java-jwt:4.3.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //h2
    runtimeOnly 'com.h2database:h2'

    //s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'


    // firebase 설정
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // jackson
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'

    // webClient 설정
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // mac os 에서 사용
    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.104.Final:osx-aarch_64'

    // logback 설정
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // apple inApp 설정
    implementation 'com.apple.itunes.storekit:app-store-server-library:3.4.0'
    // google inApp 설정
    implementation 'com.google.apis:google-api-services-androidpublisher:v3-rev20250318-2.0.0'
}

// 로그 충동로 인한 commons-logging 제거
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

final def querydslSrcDir = 'src/main/generated'
clean {
    delete file(querydslSrcDir)
}
tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslSrcDir)
}


test {
    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
}

